Changelog
=========


3.4.3 (unreleased)
------------------

- Nothing changed yet.


3.4.2 (2015-09-01)
------------------

- Add fallback in tabbedview initalization, when passed index of
  oneBeforeClick event is incorrect.
  [phgross]

- Fix javascript error in IE10 when no default index is defined.
  [Kevin Bieri]


3.4.1 (2015-08-03)
------------------

- Remove whitespace around content title.
  [deiferni]


3.4.0 (2015-05-26)
------------------

- Move tabbedview specific styles from plonetheme.onegov to this package.
  [lknoepfel]

- Fixed initial tab marker (default-tab).
  [phgross]


3.3.13 (2014-08-28)
-------------------

- Add before-tab slot.
  [mathias.leimgruber]


3.3.12 (2014-08-07)
-------------------

- JS: Use base URL to build absolute URL for set_default_tab.
  [lgraf]


3.3.11 (2014-05-28)
-------------------

- Enable D'n'D upload on tabbedview for IE > 9.
  [mathias.leimgruber]


3.3.10 (2014-05-26)
-------------------

- Made TabbedView title customizable by a custom tabbedview template.
  [phgross]

- Replaced old spinner image.
  [Julian Infanger]

- Use bind() instead of on() to restore jQuery < 1.7 compatibility.
  [lgraf]


3.3.9 (2014-03-28)
------------------

- Fix bug sometimes the default-tab setting did not work.
  [jone]

- Fixed not closed script tags.
  [lknoepfel]

- Load extjs related JS resurces only on tabbed.pt, thus we save
  700KB of JS on not tabbed views.
  [mathias.leimgruber]


3.3.8 (2013-11-28)
------------------

- Replaced unicode char for tabbedview menu header.
  Use icon instead, because the unicode char didn't work on IE.
  [Julian Infanger]


3.3.7 (2013-08-26)
------------------

- Move table_options initalization from __call__ to __init__ in listing.py.
  Otherwise the update method does not work without calling the view first.
  [mathias.leimgruber]

- Fix deprecated quickupload interface import.
  [jone]


3.3.6 (2013-07-18)
------------------

- Filter field: add placeholder.
  [jone]
