@@ -71,3 +71,7 @@
   width: 16px;
   height: 16px;
 }
+
+#tabbedview-msg-unknownresponse {
+  display: none;
+}
