@@ -36,7 +36,6 @@
     <div metal:fill-slot="main" class="tabbedview_view"
          tal:define="came_from python:request.get('HTTP_REFERER', context.absolute_url()).split('?')[0];">
       <metal:main-macro define-macro="main">
-
         <tal:variables define="tabs view/get_tab_items">
 
         <div id="tabbedview-header">
@@ -52,6 +51,10 @@
           <metal:befortabs define-slot="before-tabs">
 
           </metal:befortabs>
+
+          <div id="tabbedview-msg-unknownresponse">
+            <p tal:content="structure view/msg_unknownresponse"></p>
+          </div>
 
           <div class="tabbedview-tabs">
             <ul class="formTabs">
